added front end html

--- a/src/createOpportunity.html
+++ b/src/createOpportunity.html
@@ -50,7 +50,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       </nav>
 	<!-- main -->
 	<div class="main-w3layouts wrapper">
-		<h1>Create Contact</h1>
+		<h1>Create Opportunity</h1>
 		<div class="main-agileinfo">
 			<div class="agileits-top">
 				<form action="" method="post" id="CreateContact">
