moved request.js file

--- a/src/getContact.html
+++ b/src/getContact.html
@@ -197,7 +197,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script type = "text/javascript" src="./../home.api.js"></script> 
 <script type = "text/javascript" src="./../contact/query.js"></script> 
 <script type = "text/javascript" src="./../contact/mutations.js"></script> 
-
+<script type = "text/javascript" src="./../contact/request.js"></script> 
 
 </body>
 </html>
