--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</thead>
 					<tbody>
 					  <tr>
-						<th scope="row">Username</th>
+						<th scope="row">ID</th>
 						<td id="tablename"></td>
 					  </tr>
 					  <!-- <tr>
@@ -128,7 +128,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script type = "text/javascript" src="./../home.api.js"></script> 
 <script type = "text/javascript" src="./../contact/query.js"></script> 
 <script type = "text/javascript" src="./../contact/mutations.js"></script> 
-<script type = "text/javascript" src="./../request.js"></script> 
+<script type = "text/javascript" src="./../contact/request.js"></script> 
 <script>
 	// function actOnSubmit() {
 	// 	alert('Function Called');
