--- a/src/getContact.html
+++ b/src/getContact.html
@@ -85,14 +85,30 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<th scope="row">Username</th>
 						<td id="tablename"></td>
 					  </tr>
-					  <!-- <tr>
-						<th scope="row">2</th>
-						<td>Jacob</td>
+					  <tr>
+						<th scope="row">Email</th>
+						<td id="email"></td>
 					  </tr>
 					  <tr>
-						<th scope="row">3</th>
-						<td>Larry</td>
-					  </tr> -->
+						<th scope="row">Account</th>
+						<td id="account"></td>
+					  </tr>
+					  <tr>
+						<th scope="row">Title</th>
+						<td id="title"></td>
+					  </tr>
+					  <tr>
+						<th scope="row">Address</th>
+						<td id="address"></td>
+					  </tr>
+					  <tr>
+						<th scope="row">Work Phone</th>
+						<td id="workPhone"></td>
+					  </tr>
+					  <tr>
+						<th scope="row">Mobile Phone</th>
+						<td id="mobilePhone"></td>
+					  </tr>
 					</tbody>
 				  </table>
 			</div>
@@ -105,7 +121,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="main-agileinfo">
 			<div class="agileits-top">
 				
-				<input class="text email" type="email" name="email" id="email" placeholder="Email" required="">
+				<input class="text email" type="email" name="email" id="findemail" placeholder="Email" required="">
 					
 					<div class="wthree-text">
 						<!-- <label class="anim">
@@ -131,18 +147,34 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  </tr>
 					</thead>
 					<tbody>
-					  <tr>
-						<th scope="row">Username</th>
-						<td id="tablename"></td>
-					  </tr>
-					  <!-- <tr>
-						<th scope="row">2</th>
-						<td>Jacob</td>
-					  </tr>
-					  <tr>
-						<th scope="row">3</th>
-						<td>Larry</td>
-					  </tr> -->
+						<tr>
+							<th scope="row">Username</th>
+							<td id="Etablename"></td>
+						  </tr>
+						  <tr>
+							<th scope="row">Email</th>
+							<td id="Eemail"></td>
+						  </tr>
+						  <tr>
+							<th scope="row">Account</th>
+							<td id="Eaccount"></td>
+						  </tr>
+						  <tr>
+							<th scope="row">Title</th>
+							<td id="Etitle"></td>
+						  </tr>
+						  <tr>
+							<th scope="row">Address</th>
+							<td id="Eaddress"></td>
+						  </tr>
+						  <tr>
+							<th scope="row">Work Phone</th>
+							<td id="EworkPhone"></td>
+						  </tr>
+						  <tr>
+							<th scope="row">Mobile Phone</th>
+							<td id="EmobilePhone"></td>
+						  </tr>
 					</tbody>
 				  </table>
 			</div>
