added opportunity table for get contact

--- a/src/getContact.html
+++ b/src/getContact.html
@@ -113,6 +113,23 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				  </table>
 			</div>
 		</div>
+		<div class="main-agileinfo">
+			
+			<div id="dvTable" class="agileits-top">
+				<p id="demo">Opportunity</p>
+				<table class="table table-striped">
+					<thead>
+						<tr>
+						  <th scope="col">No.</th>
+						  <th scope="col">Name</th>
+						  <th scope="col">Account</th>
+						</tr>
+					  </thead>
+					<tbody id="tbody"></tbody>
+				</table>
+				
+			</div>
+		</div>
 		<!-- copyright -->
 		<!-- <div class="colorlibcopy-agile">
 			<p>© 2018 Colorlib Signup Form. All rights reserved | Design by <a href="https://colorlib.com/" target="_blank">Colorlib</a></p>
@@ -177,6 +194,23 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						  </tr>
 					</tbody>
 				  </table>
+			</div>
+		</div>
+		<div class="main-agileinfo">
+			
+			<div id="dvTable" class="agileits-top">
+				<p id="demo">Opportunity</p>
+				<table class="table table-striped">
+					<thead>
+						<tr>
+						  <th scope="col">No.</th>
+						  <th scope="col">Name</th>
+						  <th scope="col">Account</th>
+						</tr>
+					  </thead>
+					<tbody id="Etbody"></tbody>
+				</table>
+				
 			</div>
 		</div>
 		<ul class="colorlib-bubbles">
