delete contact completed

--- a/src/getContact.html
+++ b/src/getContact.html
@@ -241,7 +241,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</label> -->
 						<div class="clear"> </div>
 					</div>
-					<button type="onclick" onclick="contactByName()">Find</button>
+					<button type="onclick" onclick="deleteContactRequest()">Delete</button>
+					<p id= "isDeleted"></p>
 				
 				<!-- <p>Don't have an Account? <a href="#"> Login Now!</a></p> -->
 			</div>
