--- a/src/index.html
+++ b/src/index.html
@@ -111,6 +111,33 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<p>© 2018 Colorlib Signup Form. All rights reserved | Design by <a href="https://colorlib.com/" target="_blank">Colorlib</a></p>
 		</div> -->
 		<!-- //copyright -->
+		<h1>Create Contact</h1>
+		<div class="main-agileinfo">
+			<div class="agileits-top">
+				<form action="" method="post" id="UpdateContact">
+					<input class="text email" type="email" name="email" id="updateEmail" placeholder="Email" required="">
+					
+					<input class="text" type="text" name="Username" id="Uname" placeholder="Username" required="">
+					<input class="text" type="text" name="account" id="Uaccount" placeholder="Account" required="">
+					<input class="text" type="text" name="title" id="Utitle" placeholder="Title" required="">
+					<input class="text" type="text" name="address" id="Uaddress" placeholder="Address" required="">
+					<input class="text" type="tel" name="workPhone" id="UworkPhone" placeholder="Work Phone" pattern="^(?:(?:\+|0{0,2})91(\s*[\-]\s*)?|[0]?)?[789]\d{9}$" required="">
+					<input class="text" type="tel" name="mobilePhone" id="UmobilePhone" placeholder="Mobile Phone" pattern="^(?:(?:\+|0{0,2})91(\s*[\-]\s*)?|[0]?)?[789]\d{9}$" required="">
+					<div class="wthree-text">
+						<!-- <label class="anim">
+							<input type="checkbox" class="checkbox" required="">
+							<span>I Agree To The Terms & Conditions</span>
+						</label> -->
+						<div class="clear"> </div>
+					</div>
+					<!-- <input type="submit" value="CREATE"> -->
+				</form>
+				<button type="onclick" onclick="updateContactRequest()">Update</button>
+				<!-- <p>Don't have an Account? <a href="#"> Login Now!</a></p> -->
+				<p id="updatePara"></p>
+			</div>
+		</div>
+
 		<ul class="colorlib-bubbles">
 			<li></li>
 			<li></li>
