--- a/src/createOpportunity.html
+++ b/src/createOpportunity.html
@@ -55,12 +55,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="agileits-top">
 				<form action="" method="post" id="CreateContact">
 					<input class="text" type="text" name="Username" id="name" placeholder="Username" required="">
-					<input class="text email" type="email" name="email" id="email" placeholder="Email" required="">
+					<input class="text email" type="number" step="0.01" max="1" min="0.00" name="winPercentage" id="winPercentage" placeholder="Win Percentage" required="">
 					<input class="text" type="text" name="account" id="account" placeholder="Account" required="">
-					<input class="text" type="text" name="title" id="title" placeholder="Title" required="">
-					<input class="text" type="text" name="address" id="address" placeholder="Address" required="">
-					<input class="text" type="tel" name="workPhone" id="workPhone" placeholder="Work Phone" pattern="^(?:(?:\+|0{0,2})91(\s*[\-]\s*)?|[0]?)?[789]\d{9}$" required="">
-					<input class="text" type="tel" name="mobilePhone" id="mobilePhone" placeholder="Mobile Phone" pattern="^(?:(?:\+|0{0,2})91(\s*[\-]\s*)?|[0]?)?[789]\d{9}$" required="">
+					<input class="text" type="text" name="estimatedRevenue" id="estimatedRevenue" placeholder="Estimated Revenue" required="">
+					<input type="text" name="riskLevel" id="riskLevel" placeholder="Risk Level" pattern="HIGH|LOW|MEDIUM" required="">
 					<div class="wthree-text">
 						<!-- <label class="anim">
 							<input type="checkbox" class="checkbox" required="">
@@ -70,7 +68,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<!-- <input type="submit" value="CREATE"> -->
 				</form>
-				<button type="onclick" onclick="createContactRequest()">Find</button>
+				<button type="onclick" onclick="createOpportunityRequest()">Create</button>
 				<!-- <p>Don't have an Account? <a href="#"> Login Now!</a></p> -->
 			</div>
 		</div>
@@ -87,7 +85,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</thead>
 					<tbody>
 					  <tr>
-						<th scope="row">Username</th>
+						<th scope="row">ID</th>
 						<td id="tablename"></td>
 					  </tr>
 					  <!-- <tr>
@@ -111,6 +109,32 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<p>© 2018 Colorlib Signup Form. All rights reserved | Design by <a href="https://colorlib.com/" target="_blank">Colorlib</a></p>
 		</div> -->
 		<!-- //copyright -->
+		<h1>Create Opportunity</h1>
+		<div class="main-agileinfo">
+			<div class="agileits-top">
+				<form action="" method="post" id="UpdateContact">
+					<input class="text" type="text" name="account" id="account" placeholder="Account" required="">
+					
+					<input class="text" type="text" name="Username" id="name" placeholder="Username" required="">
+					<input class="text email" type="number" step="0.01" max="1" min="0.00" name="winPercentage" id="winPercentage" placeholder="Win Percentage" required="">
+					<input class="text" type="text" name="estimatedRevenue" id="estimatedRevenue" placeholder="Estimated Revenue" required="">
+					<input class="text" type="text" name="closeDate" id="closeDate" placeholder="Close Date" required="">
+					<input type="text" name="riskLevel" id="riskLevel" placeholder="Risk Level" pattern="HIGH|LOW|MEDIUM" required="">
+					<div class="wthree-text">
+						<!-- <label class="anim">
+							<input type="checkbox" class="checkbox" required="">
+							<span>I Agree To The Terms & Conditions</span>
+						</label> -->
+						<div class="clear"> </div>
+					</div>
+					<!-- <input type="submit" value="CREATE"> -->
+				</form>
+				<button type="onclick" onclick="updateOpportunityRequest()">Create</button>
+				<!-- <p>Don't have an Account? <a href="#"> Login Now!</a></p> -->
+				<p id="updateOppo"></p>
+			</div>
+		</div>
+
 		<ul class="colorlib-bubbles">
 			<li></li>
 			<li></li>
@@ -126,9 +150,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 	<!-- //main -->
 <script type = "text/javascript" src="./../home.api.js"></script> 
-<script type = "text/javascript" src="./../contact/query.js"></script> 
-<script type = "text/javascript" src="./../contact/mutations.js"></script> 
-<script type = "text/javascript" src="./../request.js"></script> 
+<script type = "text/javascript" src="./../opportunity/query.js"></script> 
+<script type = "text/javascript" src="./../opportunity/mutations.js"></script> 
+<script type = "text/javascript" src="./../opportunity/request.js"></script> 
 <script>
 	// function actOnSubmit() {
 	// 	alert('Function Called');
