--- a/src/getOpportunity.html
+++ b/src/getOpportunity.html
@@ -244,8 +244,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</label> -->
 						<div class="clear"> </div>
 					</div>
-					<button type="onclick" onclick="contactByName()">Find</button>
-				
+					<button type="onclick" onclick="deleteOpportunityRequest()">Delete</button>
+					<p id= "isDeletedO"></p>
 				<!-- <p>Don't have an Account? <a href="#"> Login Now!</a></p> -->
 			</div>
 		</div>
